--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,7 +53,7 @@
     <div class="flip-card" th:each="song : ${songs}">
         <div class="flip-card-inner">
             <div class="flip-card-front">
-                <img th:src="@{/images/} + ${song.imagePath}" loading="lazy"/>
+                <img th:src="@{/images/} + ${song.uid} + '.jpg'" loading="lazy"/>
                 <h2 th:text=" ${song.artist}">Artist</h2>
                 <p th:text="${song.titleAndVariant}">Title</p>
             </div>
@@ -62,6 +62,11 @@
                 <h4 th:text="${song.title}">Title</h4>
                 <p th:text="${song.language}">Language</p>
                 <p th:text="${song.year}">Year</p>
+                <div th:if="${song.hasAudio}">
+                    <audio controls preload="none">
+                        <source th:src="@{'/audio/'} + ${song.uid} + '.mp3' + ${song.startFragment}" th:type="@{'audio/' + ${song.audioType}}">
+                    </audio>
+                </div>
             </div>
         </div>
     </div>
